<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/menu"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/concert_one"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/triplekaisse_icon"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="264dp"
        android:layout_height="32dp"
        android:hint="@string/player_hint"
        android:fontFamily="@font/concert_one"
        android:background="@drawable/edit_text"
        android:textColorHint="@color/grey_text"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/team1_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/nb_quest_hint"
        android:fontFamily="@font/concert_one"
        android:layout_marginTop="16sp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:text="Equipe 1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_team1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:overScrollMode="never"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toStartOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/nb_quest"/>

    <EditText
        android:id="@+id/team2_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/nb_quest_hint"
        android:fontFamily="@font/concert_one"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="32dp"
        android:textSize="24sp"
        android:text="Equipe 2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_team2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="never"
        android:layout_gravity="center"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/nb_quest"/>

    <TextView
        android:id="@+id/add_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:fontFamily="@font/concert_one"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/concert_one"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/button_player"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/input"
        app:layout_constraintBottom_toBottomOf="@id/input"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:overScrollMode="never"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintBottom_toTopOf="@id/nb_quest"/>

    <EditText
        android:id="@+id/nb_quest"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/nb_quest_hint"
        android:fontFamily="@font/concert_one"
        android:layout_marginTop="26sp"
        android:textSize="24sp"
        android:text="50"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/players"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_mode"/>

    <Spinner
        android:id="@+id/game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/spinner_cat_background"
        android:popupBackground="@drawable/spinner_dropdown"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="@font/concert_one"
        android:background="@drawable/button_play"
        android:backgroundTint="@color/orange_beer"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_button"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/edit_hint"
        android:padding="4dp"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        android:background="@android:color/transparent"
        android:fontFamily="@font/concert_one"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>