<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/concert_one"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_advice"
        android:fontFamily="@font/concert_one"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />


    <EditText
        android:id="@+id/add_desc"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:textColor="@color/black"
        android:padding="12dp"
        android:hint="@string/desc_new"
        android:textColorHint="@color/grey_text"
        android:fontFamily="@font/concert_one"
        android:layout_marginTop="26sp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded"
        android:textSize="20sp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/type_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_type"
        android:fontFamily="@font/concert_one"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_desc" />

    <Spinner
        android:id="@+id/item_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/type_card"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/spinner_cat_background"
        android:popupBackground="@drawable/spinner_dropdown"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_beer"
        android:background="@drawable/button_play"
        android:paddingHorizontal="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:fontFamily="@font/concert_one"
        app:layout_constraintTop_toBottomOf="@id/item_role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Ajouter au jeu" />


</androidx.constraintlayout.widget.ConstraintLayout>